--- a/app/src/main/res/layout/viewholder_danger.xml
+++ b/app/src/main/res/layout/viewholder_danger.xml
@@ -3,18 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="?attr/selectableItemBackground"
-    android:focusable="true"
+    android:layout_height="wrap_content"
     android:clickable="true"
-    android:layout_height="@dimen/two_line_list_item_height">
+    android:focusable="true"
+    android:background="?selectableItemBackground">
+
+    <View
+        android:id="@+id/list_item_background"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageView
         android:id="@+id/list_item_icon"
-        android:layout_width="@dimen/list_item_icon_size"
-        android:layout_height="@dimen/list_item_icon_size"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginStart="@dimen/list_item_margin"
-        android:layout_marginTop="@dimen/list_item_margin"
         android:src="@drawable/ic_monster_celestial"
+        app:layout_constraintBottom_toBottomOf="@id/list_item_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,24 +33,36 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/list_item_margin"
-        android:layout_marginTop="@dimen/list_item_margin"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@id/add_button"
+        android:layout_marginEnd="@dimen/list_item_margin"
+        app:layout_constraintBottom_toBottomOf="@id/list_item_background"
+        app:layout_constraintEnd_toStartOf="@id/level_background"
         app:layout_constraintStart_toEndOf="@id/list_item_icon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Aasimar" />
 
+    <View
+        android:id="@+id/level_background"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintBottom_toBottomOf="@id/list_item_background"
+        app:layout_constraintEnd_toStartOf="@id/add_button"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/list_item_caption"
-        style="@style/Caption"
-        android:layout_width="0dp"
+        style="@style/ListItem.Level"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/list_item_caption_gap"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@id/add_button"
-        app:layout_constraintStart_toStartOf="@id/list_item_title"
-        app:layout_constraintTop_toBottomOf="@id/list_item_title"
-        tools:text="Aasimar" />
+        android:ellipsize="none"
+        android:padding="4dp"
+        android:textAlignment="center"
+        android:textColor="?colorOnSurface"
+        app:layout_constraintBaseline_toBaselineOf="@id/list_item_title"
+        app:layout_constraintEnd_toEndOf="@id/level_background"
+        app:layout_constraintStart_toStartOf="@id/level_background"
+        tools:text="20" />
 
     <ImageView
         android:id="@+id/add_button"
@@ -55,9 +76,143 @@
         android:paddingBottom="16dp"
         android:paddingStart="32dp"
         android:src="@drawable/ic_add_circle_outline"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/list_item_background"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/list_item_background" />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/detail_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/list_item_background"
+        tools:layout_height="wrap_content"
+        tools:visibility="visible">
+
+
+        <LinearLayout
+            android:id="@+id/traits"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/list_item_margin"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="@dimen/list_item_margin"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                style="@style/Caption.Trait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trait_rare"
+                android:text="Rare" />
+
+            <TextView
+                style="@style/Caption.Trait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trait_alignment"
+                android:text="N" />
+
+            <TextView
+                style="@style/Caption.Trait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trait_size"
+                android:text="Huge" />
+
+            <TextView
+                style="@style/Caption.Trait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trait_general"
+                android:text="Construct" />
+
+            <TextView
+                style="@style/Caption.Trait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trait_general"
+                android:text="Golem" />
+
+            <TextView
+                style="@style/Caption.Trait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trait_general"
+                android:text="Mindless" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/details"
+            style="@style/Description"
+            android:fontFamily="@font/amaranth_bold"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/list_item_margin"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="@dimen/list_item_margin"
+            tools:text="40 XP - Single Thread monsters"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/traits" />
+
+        <TextView
+            android:id="@+id/description"
+            style="@style/Description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/list_item_margin"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/list_item_margin"
+            tools:text="Golem - Crafted from a nigh-indestructible metal of great rarity, adamantine golems can’t be destroyed except by the most powerful foes."
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/details" />
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/edit_button"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/list_item_margin"
+            android:text="@string/custom_monster_edit_button_option"
+            android:visibility="gone"
+            app:icon="@drawable/ic_create"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/description" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/delete_button"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/list_item_margin"
+            android:text="@string/encounter_delete"
+            android:visibility="gone"
+            app:icon="@drawable/ic_delete"
+            app:layout_constraintEnd_toStartOf="@id/edit_button"
+            app:layout_constraintTop_toBottomOf="@id/description" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/archives_button"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/list_item_margin"
+            android:text="@string/archives_of_nethys_link"
+            app:icon="@drawable/ic_link"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/description" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
