--- a/app/src/main/res/layout/viewholder_encounter_monster.xml
+++ b/app/src/main/res/layout/viewholder_encounter_monster.xml
@@ -3,10 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/three_line_list_item_height"
+    android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true">
+
+    <View
+        android:id="@+id/list_item_background"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/two_line_list_item_height"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/list_item_icon"
@@ -26,7 +34,7 @@
         android:layout_marginStart="@dimen/list_item_margin"
         android:layout_marginTop="@dimen/list_item_margin"
         android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@id/monster_count_increment"
+        app:layout_constraintEnd_toStartOf="@id/level_caption"
         app:layout_constraintStart_toEndOf="@id/list_item_icon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Aasimar" />
@@ -38,22 +46,36 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/list_item_caption_gap"
         android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@id/monster_count_increment"
+        app:layout_constraintEnd_toStartOf="@id/level_caption"
         app:layout_constraintStart_toStartOf="@id/list_item_title"
         app:layout_constraintTop_toBottomOf="@id/list_item_title"
         tools:text="Aasimar" />
 
+    <View
+        android:id="@+id/level_background"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintBottom_toBottomOf="@id/list_item_background"
+        app:layout_constraintEnd_toStartOf="@id/monster_count_increment"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-        android:id="@+id/list_item_role"
-        style="@style/Caption"
-        android:layout_width="0dp"
+        android:id="@+id/level_caption"
+        style="@style/ListItem.Level"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/list_item_caption_gap"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@id/monster_count_increment"
-        app:layout_constraintStart_toStartOf="@id/list_item_title"
-        app:layout_constraintTop_toBottomOf="@id/list_item_caption"
-        tools:text="Aasimar" />
+        android:ellipsize="none"
+        android:padding="4dp"
+        android:layout_marginBottom="4dp"
+        android:textAlignment="center"
+        android:textColor="?colorOnSurface"
+        app:layout_constraintTop_toTopOf="@id/monster_count_increment"
+        app:layout_constraintBottom_toBottomOf="@id/monster_count_increment"
+        app:layout_constraintEnd_toEndOf="@id/level_background"
+        app:layout_constraintStart_toStartOf="@id/level_background"
+        tools:text="20" />
 
     <ImageView
         android:id="@+id/monster_count_decrement"
@@ -65,22 +87,9 @@
         android:focusable="true"
         android:padding="16dp"
         android:src="@drawable/ic_remove_circle_outline"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/list_item_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
-    <TextView
-        android:id="@+id/monster_count_textView"
-        style="@style/ListItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/monster_count_decrement"
-        app:layout_constraintStart_toStartOf="@id/monster_count_increment"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="1" />
 
     <ImageView
         android:id="@+id/monster_count_increment"
@@ -92,8 +101,137 @@
         android:focusable="true"
         android:padding="16dp"
         android:src="@drawable/ic_add_circle_outline"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/monster_count_textView"
+        app:layout_constraintBottom_toBottomOf="@id/list_item_background"
+        app:layout_constraintEnd_toStartOf="@id/monster_count_decrement"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/detail_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/list_item_background"
+        tools:layout_height="wrap_content"
+        tools:visibility="visible">
+
+
+        <LinearLayout
+            android:id="@+id/traits"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/list_item_margin"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="@dimen/list_item_margin"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                style="@style/Caption.Trait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trait_rare"
+                android:text="Rare" />
+
+            <TextView
+                style="@style/Caption.Trait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trait_alignment"
+                android:text="N" />
+
+            <TextView
+                style="@style/Caption.Trait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trait_size"
+                android:text="Huge" />
+
+            <TextView
+                style="@style/Caption.Trait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trait_general"
+                android:text="Construct" />
+
+            <TextView
+                style="@style/Caption.Trait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trait_general"
+                android:text="Golem" />
+
+            <TextView
+                style="@style/Caption.Trait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/trait_general"
+                android:text="Mindless" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/description"
+            style="@style/Description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/list_item_margin"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/list_item_margin"
+            tools:text="Golem - Crafted from a nigh-indestructible metal of great rarity, adamantine golems can’t be destroyed except by the most powerful foes."
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/traits" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/adjust_button"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/list_item_margin"
+            android:text="@string/adjust_monster_strength_button"
+            android:layout_marginStart="@dimen/list_item_margin"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/description" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/edit_button"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/list_item_margin"
+            android:text="@string/custom_monster_edit_button_option"
+            android:visibility="gone"
+            app:icon="@drawable/ic_create"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/description" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/delete_button"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/list_item_margin"
+            android:text="@string/encounter_delete"
+            android:visibility="gone"
+            app:icon="@drawable/ic_delete"
+            app:layout_constraintEnd_toStartOf="@id/edit_button"
+            app:layout_constraintTop_toBottomOf="@id/description" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/archives_button"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/list_item_margin"
+            android:text="@string/archives_of_nethys_link"
+            app:icon="@drawable/ic_link"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/description" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
