--- a/app/src/main/res/layout/viewholder_danger.xml
+++ b/app/src/main/res/layout/viewholder_danger.xml
@@ -178,7 +178,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/edit_button"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/list_item_margin"
@@ -190,7 +190,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/delete_button"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/list_item_margin"
@@ -202,7 +202,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/archives_button"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/list_item_margin"
