--- a/app/src/main/res/layout/viewholder_treasure.xml
+++ b/app/src/main/res/layout/viewholder_treasure.xml
@@ -149,7 +149,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/edit_button"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/list_item_margin"
@@ -161,7 +161,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/delete_button"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/list_item_margin"
@@ -173,7 +173,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/archives_button"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/list_item_margin"
